<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GioHangActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/txtTileGioHang"
                app:titleTextColor="@color/white"
                android:id="@+id/tollbarGioHang"
                android:background="@color/orange">
            </androidx.appcompat.widget.Toolbar>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingTop="5dp"
                android:id="@+id/recylerGioHang"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtTongtien"
                    android:textSize="20dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0d"
                    android:textSize="20dp"
                    android:id="@+id/txtTongtien"
                    android:textColor="@color/red"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtVAT"
                    android:textSize="20dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0d"
                    android:textSize="20dp"
                    android:id="@+id/txtVAT"
                    android:textColor="@color/red"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txtTotal"
                    android:textSize="20dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0d"
                    android:textSize="20dp"
                    android:id="@+id/txtTienThanhToan"
                    android:textColor="@color/red"/>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtThanhToan"
                android:textAllCaps="false"
                android:textSize="23dp"
                android:textColor="@color/white"
                android:background="@drawable/custom_btn_add"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:drawableRight="@drawable/ic_add_card"
                android:paddingRight="15dp"
                android:layout_marginTop="50dp"
                android:id="@+id/btnThanhToan"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtTieptucmua"
                android:textAllCaps="false"
                android:textSize="23dp"
                android:textColor="@color/white"
                android:background="@drawable/custom_btn_add"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/btnTiepTucMua"/>
        </LinearLayout>
    </ScrollView>
</layout>