<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_adapter_shoe"
    android:layout_margin="5dp"
    >

    <ImageView
        android:id="@+id/imgNike"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:src="@drawable/nike1" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_favorite_off"
        android:layout_toRightOf="@id/imgNike"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="5dp"
        android:id="@+id/imgFavoriteNike"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNameShoe"
        android:layout_below="@id/imgNike"
        android:layout_marginLeft="10dp"
        android:textSize="17dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtNameNike"
        android:padding="5dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txtdongNike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNameNike"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="4dp"
        android:text="@string/txtd"
        android:textColor="@color/red" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtMoney"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtNameNike"
        android:layout_toRightOf="@id/txtdongNike"
        android:textColor="@color/red"
        android:layout_marginLeft="3dp"
        android:id="@+id/txtMoneyNike"
        android:layout_marginBottom="10dp"
        android:textSize="18dp"/>
</RelativeLayout>