<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_adapter_shoe"
    android:layout_margin="5dp"
    >

    <ImageView
        android:id="@+id/imgSanPhamSale"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:src="@drawable/nike1" />
    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/sale"
        android:id="@+id/imgLogoSale"
        android:background="@color/white"
        android:layout_marginBottom="5dp"
        android:layout_marginHorizontal="6dp"
        android:layout_marginTop="5dp"/>
    <RelativeLayout
        android:layout_width="80dp"
        android:layout_toRightOf="@id/imgSanPhamSale"
        android:layout_marginLeft="30dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_favorite_off"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:id="@+id/imgFavoriteSale"/>
<!--        <ImageView-->
<!--            android:layout_width="32dp"-->
<!--            android:layout_height="50dp"-->
<!--            android:src="@drawable/ic_favorite_on"-->
<!--            android:layout_marginLeft="35dp"-->
<!--            android:id="@+id/imgFavoriteSaleOn"/>-->
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNameShoe"
        android:layout_below="@id/imgSanPhamSale"
        android:layout_marginLeft="10dp"
        android:textSize="18dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtNameSale"
        android:padding="5dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/txtdongSale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMoneySaleBanDau"
        android:layout_marginHorizontal="65dp"
        android:layout_marginTop="4dp"
        android:text="@string/txtd"
        android:textColor="@color/red" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtMoneyBanDau"
        android:id="@+id/txtMoneySaleBanDau"
        android:layout_below="@id/txtNameSale"
        android:textSize="18dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/strike_through"/>
    <TextView
        android:id="@+id/txtdongSaleBanDau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtNameSale"
        android:layout_marginHorizontal="65dp"
        android:layout_marginTop="4dp"
        android:text="@string/txtd"
        android:textColor="@color/xam" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtMoney"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtMoneySaleBanDau"
        android:layout_toRightOf="@id/txtdongSale"
        android:textColor="@color/red"
        android:id="@+id/txtMoneySale"
        android:layout_marginBottom="10dp"
        android:textSize="18dp"/>
</RelativeLayout>